--- a/WIC2/index.html
+++ b/WIC2/index.html
@@ -1,1 +1,63 @@
-test
+<!doctype HTML>
+<html>
+	<head>
+		<style>
+			a{
+				color:black;
+				text-decoration: none;
+			}
+			nav ul li a{
+				text-transform:caplitalize;
+				font-size: 22px;
+			}
+			nav ul li a{
+				font-size: 44px;  <!--this will always take over the last one-->
+			}
+			li{
+				display: inline-block;
+			}
+			h3{
+				text-transform: uppercase <!--capitalize-->;
+				letter-spacing: 2px;
+			}
+			body{
+				background:#ddd;
+				font-family:arial,sans-serif;
+				padding: 50px;
+			}
+			div{
+				margin: 20px 0;
+				border-top: 1px solid black;
+				border-bottom: 1px solid black;
+			}
+		</style>
+
+	</head>
+	<body>
+		<nav>
+			<ul>  <!--can put <ol> which come up as number-->
+				<li><a href="#">about us</a></li>
+				 1<!--try change"#" into "google.com"-->
+				<li><a href="#">portfolio</a></li>
+			</ul>
+		</nav>
+		<h2>
+			Your name
+		</h2>
+		<div>
+			<img src="#">
+			<h3>
+				I enjoy lift as a developer
+			</h3>
+			<p>  <!---div can be used instead of p, but p is the greatest-->
+			loren ipsum dasgdgsdfsdfasdfasdfsadf
+			</p>
+			<ul>
+				<li><a href="#">facebook</a></li> 
+				<li><a href="#">twitter</a></li>
+				<li><a href="#">instagram</a></li> 
+				<li><a href="#">linkedin</a></li>
+			</ul>
+		</div>
+	</body>
+</html>
