--- a/WIC2/index.html
+++ b/WIC2/index.html
@@ -2,62 +2,82 @@
 <html>
 	<head>
 		<style>
+			
+			
 			a{
-				color:black;
+				color:#ff3399;
 				text-decoration: none;
 			}
+
 			nav ul li a{
-				text-transform:caplitalize;
-				font-size: 22px;
+				color:#8cff66;
+				text-transform:capitalize;
+				font-size:20px;
 			}
-			nav ul li a{
-				font-size: 44px;  <!--this will always take over the last one-->
-			}
+
 			li{
 				display: inline-block;
 			}
-			h3{
-				text-transform: uppercase <!--capitalize-->;
+
+			h2{
+				font-size:40px;
+				color:white;
+				margin:1cm 0.5cm 0.5cm 1cm;
+			}
+
+			h3{ 
+				color: white;
+				text-transform:uppercase;
 				letter-spacing: 2px;
+				margin:0.3cm 0.5cm 0.5cm 1cm;
 			}
+
 			body{
-				background:#ddd;
-				font-family:arial,sans-serif;
-				padding: 50px;
-			}
-			div{
-				margin: 20px 0;
-				border-top: 1px solid black;
-				border-bottom: 1px solid black;
-			}
+				background:black;
+				font-family:Century Gothic,sans-serif;
+			       padding:50px;}
+
+			 p{
+			 	color:white;
+			 }
+
+			 div{
+			 	margin: 20px 0;
+			 	border-top:1px solid white;
+			 	border-bottom:1px solid white;
+			 }
+			
 		</style>
 
 	</head>
 	<body>
 		<nav>
-			<ul>  <!--can put <ol> which come up as number-->
-				<li><a href="#">about us</a></li>
-				 1<!--try change"#" into "google.com"-->
-				<li><a href="#">portfolio</a></li>
+			<ul>  
+				<li><a href="#">About me</a></li>
+				|
+				<li><a href="#">Portfolio</a></li>
+				
 			</ul>
 		</nav>
 		<h2>
-			Your name
+			Ying Hu
 		</h2>
 		<div>
-			<img src="#">
-			<h3>
-				I enjoy lift as a developer
-			</h3>
-			<p>  <!---div can be used instead of p, but p is the greatest-->
-			loren ipsum dasgdgsdfsdfasdfasdfsadf
-			</p>
+			
 			<ul>
-				<li><a href="#">facebook</a></li> 
-				<li><a href="#">twitter</a></li>
-				<li><a href="#">instagram</a></li> 
-				<li><a href="#">linkedin</a></li>
+				
+				<li><a href="https://www.facebook.com/tiffany.hu.3517">Facebook</a></li> 
+				|
+				<li><a href="https://www.linkedin.com/in/ying-tiffany-hu-61722a26/">Linkedin</a></li>
 			</ul>
+			
+			<h3>
+			   I like to learn new skills & apply to my job
+			</h3>
+			<p>  
+			My name is Ying Hu, I have been an account payable specialist for three years. I take care of invoices processing, payment forecast and sales reports, employees' reimbursements, account and GL reconciliation etc. I also have intermediate excel and SAP skills. Besides, I am taking a front-end development class which will bring lots of benefits to my current job. 
+			</p>
+			<img src="#">
 		</div>
 	</body>
 </html>
