--- a/WIC2/index.html
+++ b/WIC2/index.html
@@ -1,60 +1,15 @@
 <!doctype HTML>
 <html>
 	<head>
-		<style>
-			
-			
-			a{
-				color:#ff3399;
-				text-decoration: none;
-			}
-
-			nav ul li a{
-				color:#8cff66;
-				text-transform:capitalize;
-				font-size:20px;
-			}
-
-			li{
-				display: inline-block;
-			}
-
-			h2{
-				font-size:40px;
-				color:white;
-				margin:1cm 0.5cm 0.5cm 1cm;
-			}
-
-			h3{ 
-				color: white;
-				text-transform:uppercase;
-				letter-spacing: 2px;
-				margin:0.3cm 0.5cm 0.5cm 1cm;
-			}
-
-			body{
-				background:black;
-				font-family:Century Gothic,sans-serif;
-			       padding:50px;}
-
-			 p{
-			 	color:white;
-			 }
-
-			 div{
-			 	margin: 20px 0;
-			 	border-top:1px solid white;
-			 	border-bottom:1px solid white;
-			 }
-			
-		</style>
+		
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 	</head>
 	<body>
 		<nav>
-			<ul>  
+			<ul>  <!--can put <ol> which come up as number-->
 				<li><a href="#">About me</a></li>
-				|
+				|<!--try change"#" into "google.com"-->
 				<li><a href="#">Portfolio</a></li>
 				
 			</ul>
@@ -74,7 +29,7 @@
 			<h3>
 			   I like to learn new skills & apply to my job
 			</h3>
-			<p>  
+			<p>  <!---div can be used instead of p, but p is the greatest-->
 			My name is Ying Hu, I have been an account payable specialist for three years. I take care of invoices processing, payment forecast and sales reports, employees' reimbursements, account and GL reconciliation etc. I also have intermediate excel and SAP skills. Besides, I am taking a front-end development class which will bring lots of benefits to my current job. 
 			</p>
 			<img src="#">
