--- a/Relaxr/starter_code/index.html
+++ b/Relaxr/starter_code/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<section id="header">
 		<h2>Relaxr</h2>
-		<h1>Get Piace of mind with a single tap</h1>
+		<h1>Get Piece of mind with a single tap</h1>
 		<a href="#"><button type="button">Get it Now</button></a>
 
 		</section>
@@ -24,11 +24,11 @@
 		</section>
 		<section id="testimonial">
 			<p>"Relaxr changed my life. Ive been able to travel the world,spend limited time working and my boss keeps thanking me for crushing work."</p>
-			<span style="font-family:#";"> Amanda, Intuit</span>
+			<span> -Amanda, Intuit</span>
 
 		</section>
 		<section id="yellow">
-			<a href="#">Sign Up Now!</a>
+		<a href="#"><button type="button">Sign Up Now!</button></a>
 
 
 		</section>
